2003-07-20  Bruno Rodrigues  <bruno.rodrigues@litux.org>
    * configure{,.in}: --with-defaults default value is "speed"
    * userguide.xml: changed some strings, added others, added some 
      features, fixed duplicate software requirements, fixed ./configure
      defaults (still missing some options), fixed redhat and some debian
      strings, Capitalized every "Kannel" reference, removed aarno hardcoded
      directories in examples.

2003-07-20  Alexander Malysh  <a.malysh@centrium.de>
    * gw/bb_smscconn{.c,_cb.h}, gw/dlr.[ch], gw/smsc/smsc_{at,cgw,cimd2,emi,
      fake,http,smasi,smpp,soap,wrapper}.c: added generic 
      DLR_SMSC_[SUCCESS|FAIL] code. All smscs benefit from it. Advantages 
      follow:
        1) no code duplication in every smsc.
        2) even fake/old smscs have now DLR_SMSC_[SUCCESS|FAIL] support for 
	   free.
        3) always the same format for dlr messages e.g. 
	   "ACK/some_driver_message", 
	   "NACK/some_driver_message_or_error_code".

2003-07-20  Alexander Malysh  <a.malysh@centrium.de>
    * gw/bb_store.c: always set message id and timestamp.

2003-07-20  Bruno Rodrigues  <bruno.rodrigues@litux.org>
    * gw/smscconn{.c,_p.h}: renamed <emi2> to <emi> and <at2> to <at>
    * gw/smsc/smsc.c: removed <at> and <emi_ip> (<emi> alias); renamed 
      <emi> to <emi_x25>
    * gw/smsc/smsc_at.c: change comment and include directive 
    * gw/smsc/smsc_p.h: renamed EMI to EMI_X25 and removed EMI_IP and non
      existant EMI_X31
    * gw/smsc/smsc_emi_x25.c: removed emi_ip code
    * doc/userguide/userguide.xml: changed emi/emi2 and at/at2 sections and
      added a new appendix to include important information for upgrades

2003-07-20  Bruno Rodrigues  <bruno.rodrigues@litux.org>
    * : The "clean up old modules and break everything" patch ;)
    * gw/smsc: removed smsc_at, moved smsc_at2 to smsc_at; moved smsc_emi
      to smsc_emi_x25 and smsc_emi2 to smsc_emi.
      No changes were made to these files.